remove social icons from the top and add them to the bottom

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 						<a href="#" class="icon fa-home"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Projects</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/_PolyG" target="_blank" class="icon fa-twitter"><span>Twitter</span></a>
-						<a href="https://github.com/Poly-G" target="_blank" class="icon fa-github"><span>GitHub</span></a>
-						<a href="https://www.linkedin.com/in/poly-goveia/" target="_blank" class="icon fa-linkedin" ><span>LinkedIn</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -103,11 +100,16 @@
 					</div>
 
 				<!-- Footer -->
-					<div id="footer">
-						<ul class="copyright">
-							<li>&copy; 2019 Poly Goveia</li>
-						</ul>
-					</div>
+					<footer>
+						<div class="social-icons">
+							<a href="https://twitter.com/_PolyG" target="_blank" class="icon fa-twitter"></a>
+							<a href="https://github.com/Poly-G" target="_blank" class="icon fa-github"></a>
+							<a href="https://www.linkedin.com/in/poly-goveia/" target="_blank" class="icon fa-linkedin"></a>
+						</div>
+						<div class="copyright">
+							<p>&copy; 2019 Poly Goveia</p>
+						</div>
+					</footer>
 
 			</div>
 
